samples/_failures_safe/1761321411_b2a34d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_308ad7d8.c: In function ‘main’:
./samples/SAFE/__tmp_308ad7d8.c:151:5: error: expected declaration or statement at end of input
  151 |     printf("\nMatrix Operations:\n");
      |     ^~~~~~
